Also delete cpp files

--- a/faust/single_notes/Makefile
+++ b/faust/single_notes/Makefile
@@ -4,6 +4,7 @@ OUTPUT_DIR := $(BASE_DIR)/compiled_notes
 
 DSP_FILES := $(wildcard $(INPUT_DIR)/*.dsp)
 BINARIES := $(patsubst $(INPUT_DIR)/%.dsp, $(OUTPUT_DIR)/%, $(DSP_FILES))
+CPP_FILES := $(patsubst %.dsp, %.dsp.cpp, $(notdir $(DSP_FILES)))
 
 .PHONY: all clean
 
@@ -20,9 +21,10 @@ $(OUTPUT_DIR)/%: $(INPUT_DIR)/%.dsp
 	@if [ -f $(INPUT_DIR)/$* ]; then \
 		mv $(INPUT_DIR)/$* $@ && echo "Movido ejecutable $* a $(OUTPUT_DIR)"; \
 	else \
-		echo "No se encontró el ejecutable $(INPUT_DIR)$* generado para $<"; \
+		echo "No se encontró el ejecutable $(INPUT_DIR)/$* generado para $<"; \
 	fi
 
 clean:
-	rm -rf $(OUTPUT_DIR)
-
+	@rm -rf $(OUTPUT_DIR)
+	@rm -f $(addprefix $(INPUT_DIR)/, $(CPP_FILES))
+	@echo "Limpieza completa: ejecutables y archivos .cpp eliminados"
