Update keymap based on the new keys order modified on the kernel dts

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "input.h": "c",
         "cstdlib": "c",
         "fcntl.h": "c",
-        "keymap.h": "c"
+        "keymap.h": "c",
+        "input_handler.h": "c"
     }
 }
