--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "cstdlib": "c",
         "fcntl.h": "c",
         "keymap.h": "c",
-        "input_handler.h": "c"
+        "input_handler.h": "c",
+        "unistd.h": "c"
     }
 }
