--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,11 @@
         "fcntl.h": "c",
         "keymap.h": "c",
         "input_handler.h": "c",
-        "unistd.h": "c"
+        "unistd.h": "c",
+        "mcp3221.h": "c",
+        "stdbool.h": "c",
+        "stdlib.h": "c",
+        "stdio.h": "c",
+        "stdint.h": "c"
     }
 }
