Reorder sensor functions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "stdbool.h": "c",
         "stdlib.h": "c",
         "stdio.h": "c",
-        "stdint.h": "c"
+        "stdint.h": "c",
+        "osc_handler.h": "c"
     }
 }
