--- a/saxophone_control/Makefile
+++ b/saxophone_control/Makefile
@@ -1,21 +1,26 @@
 CC=gcc
 CFLAGS=-I./src
 SRC=src
-MAIN=keyboard_test
+KEYBOARD=keyboard_test
+MAIN=main
 BIN = bin
 
-all: $(BIN) $(BIN)/simple $(BIN)/osc $(BIN)/full
+all: $(BIN) $(BIN)/main
+test: $(BIN) $(BIN)/simple $(BIN)/osc $(BIN)/full
 
 $(BIN):
 	mkdir -p $(BIN)
 
-$(BIN)/simple: $(MAIN)/main_simple.c $(SRC)/input_handler.c $(SRC)/keymap.c
+$(BIN)/simple: $(KEYBOARD)/main_simple.c $(SRC)/input_handler.c $(SRC)/keymap.c
 	$(CC) $(CFLAGS) $^ -o $@
 
-$(BIN)/osc: $(MAIN)/main_osc.c $(SRC)/input_handler.c $(SRC)/keymap.c $(SRC)/osc_handler.c
+$(BIN)/osc: $(KEYBOARD)/main_osc.c $(SRC)/input_handler.c $(SRC)/keymap.c $(SRC)/osc_handler.c
 	$(CC) $(CFLAGS) $^ -llo -o $@
 
-$(BIN)/full: $(MAIN)/main_full.c $(SRC)/input_handler.c $(SRC)/keymap.c $(SRC)/osc_handler.c $(SRC)/mcp3221.c
+$(BIN)/full: $(KEYBOARD)/main_full.c $(SRC)/input_handler.c $(SRC)/keymap.c $(SRC)/osc_handler.c $(SRC)/mcp3221.c
+	$(CC) $(CFLAGS) $^ -llo -o $@
+
+$(BIN)/main: $(MAIN)/main.c $(SRC)/input_handler.c $(SRC)/keymap.c $(SRC)/osc_handler.c $(SRC)/mcp3221.c $(SRC)/audio.c $(MAIN)/modes.c
 	$(CC) $(CFLAGS) $^ -llo -o $@
 
 clean:
